big fixes and modernization on the viewworkitem form, add a 'visible' link to it on monitor_workitems and move the duration time calcul to monitor class
git-svn-id: http://svn.egroupware.org/egroupware/trunk@18732 923e3c2e-ae13-0410-ba18-ced7211e33de

--- a/workflow/templates/default/css/monitors.css
+++ b/workflow/templates/default/css/monitors.css
@@ -202,6 +202,10 @@ th.th_mw_itemid
 {
 	text-align:left;
 }
+th.th_mw_details
+{
+	text-align:left;
+}
 th.th_mw_procname
 {
 	text-align:left;
@@ -219,6 +223,11 @@ td.td_mw_itemid
 {
 	text-align:left;
 }
+td.td_mw_details
+{
+	text-align:left;
+}
+
 td.td_mw_procname
 {
 	text-align:left;
